// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FILTERSEARCH SNAPSHOTS TESTS "category" actor FilterSearch should not be changed 1`] = `
<div
  class="container__formContent"
  data-testid="filterSearch"
>
  <div
    class="container__inputBody"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-1"
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        aria-controls="react-autowhatever-1"
        autocomplete="off"
        name="person"
        placeholder="filterPanel.searchByActor"
        type="text"
        value=""
      />
      <div
        id="react-autowhatever-1"
        role="listbox"
      />
    </div>
    <div
      class="container__fieldButton"
    >
      <div
        class="container__buttonIcon container__buttonIcon_search"
      />
    </div>
  </div>
</div>
`;

exports[`FILTERSEARCH SNAPSHOTS TESTS "category" director FilterSearch should not be changed 1`] = `
<div
  class="container__formContent"
  data-testid="filterSearch"
>
  <div
    class="container__inputBody"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-1"
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        aria-controls="react-autowhatever-1"
        autocomplete="off"
        name="person"
        placeholder="filterPanel.searchByDirector"
        type="text"
        value=""
      />
      <div
        id="react-autowhatever-1"
        role="listbox"
      />
    </div>
    <div
      class="container__fieldButton"
    >
      <div
        class="container__buttonIcon container__buttonIcon_search"
      />
    </div>
  </div>
</div>
`;
